--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -48,7 +48,7 @@
   <meta name="msapplication-TileColor" content="#e87f4d">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#e87f4d">
-  <link rel="canonical" href="https://emporio-web-v2-765b2736bf11.herokuapp.com/" />
+  <link rel="canonical" href="https://emporio-web-v2-765b2736bf11.herokuapp.com" />
   <!-- Favicon -->
   <link rel="shortcut icon" href="./favicon.ico">
   <!-- Front -->
